# vehicle_insurance_app

./: .cruft.json  .gitignore  README.md  playwright-log.txt  pyproject.toml  tasks.py
tests/: api_insurance.robot  insurance_ui.robot
tests/resources/: common.robot
