[tool.poetry]
name = "vehicle_insurance_app"
version = "0.1.0"
description = ""
authors = ["Amrita <matta.amrita@gmail.com>"]
readme = "README.md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.12"
flask = "^3.0.3"
werkzeug = "^3.1.3"
click = "^8.1.7"
faker = "^30.8.2"
robotframework-browser = "^19.10.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
invoke = "^2.2.0"
isort = "^5.13.2"
robotframework-browser = "^19.10.1"

[tool.poetry.group.test.dependencies]
requests = "^2.32.3"
robotframework = "^7.1.1"
robotframework-tidy = "^4.14.0"
robotframework-seleniumlibrary = "^6.6.1"
robotframework-faker = "^5.0.0"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 120
